tests/invalid/type_inf_loop.m
:- module type_inf_loop.
:- interface.
:- implementation.
loop(loop).
:- end_module type_inf_loop.

