tests/invalid/type_inf_loop.err_exp
Type inference iteration limit exceeded. This probably indicates that your
  program has a type error. You should declare the types explicitly. (The
  current limit is 60 iterations. You can use the
  `--type-inference-iteration-limit' option to increase the limit).
type_inf_loop.m:001: Warning: interface for module `type_inf_loop' does not
type_inf_loop.m:001:   export anything.
type_inf_loop.m:004: Error: clause for predicate `type_inf_loop.loop'/1
type_inf_loop.m:004:   without corresponding `:- pred' declaration.
type_inf_loop.m:004: Inferred :- pred loop((pred (pred (pred (pred (pred (pred
type_inf_loop.m:004:   (pred (pred (pred (pred (pred (pred (pred (pred (pred
type_inf_loop.m:004:   (pred (pred (pred (pred (pred (pred (pred (pred (pred
type_inf_loop.m:004:   (pred (pred (pred (pred (pred (pred (pred (pred (pred
type_inf_loop.m:004:   (pred (pred (pred (pred (pred (pred (pred (pred (pred
type_inf_loop.m:004:   (pred (pred (pred (pred (pred (pred (pred (pred (pred
type_inf_loop.m:004:   (pred (pred (pred (pred (pred (pred (pred (pred (pred
type_inf_loop.m:004:   T1))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))).
For more information, recompile with `-E'.
